Crashes with add-on's icon preview in menus #83776

Closed
opened 2020-12-14 21:20:20 +01:00 by Ari Sea · 34 comments

System Information
Operating system: Darwin-18.7.0-x86_64-i386-64bit 64 Bits
Graphics card: AMD Radeon R 9 M370X OpenGL Engine ATI Technologies Inc. 4.1 ATI-2.11.22

Blender Version
Broken: version: 2.92.0 Alpha, branch: master (modified), commit date: 2020-12-14 17:43, hash: 49ec3cef69
Worked: version 2.92.0 Alpha, branch: master, commit dates before 13/12/2020

Short description of error
Add-ons that create new or modify existing menus now crash Blender in the latest commits. This includes stock add-ons (e.g. Extra Objects, Archimesh, Archipack, Boltfactory, etc.) and 3rd party ones (in my case, Graswald. But, I know that 3rd-party tools are for the creator to fix, so this can be ignored).

Exact steps for others to reproduce the error

  • Launch Blender and enable an add-on that creates new or modifies a menu
  • Call the newly created/modified menu
  • Crash
Thread 27 Crashed:
0   org.blenderfoundation.blender 	0x000000010a84bdbe icon_preview_startjob_all_sizes + 206
1   org.blenderfoundation.blender 	0x0000000109696677 do_job_thread + 39
2   libsystem_pthread.dylib       	0x00007fff724572eb _pthread_body + 126
3   libsystem_pthread.dylib       	0x00007fff7245a249 _pthread_start + 66
4   libsystem_pthread.dylib       	0x00007fff7245640d thread_start + 13
**System Information** Operating system: Darwin-18.7.0-x86_64-i386-64bit 64 Bits Graphics card: AMD Radeon R 9 M370X OpenGL Engine ATI Technologies Inc. 4.1 ATI-2.11.22 **Blender Version** Broken: version: 2.92.0 Alpha, branch: master (modified), commit date: 2020-12-14 17:43, hash: `49ec3cef69` Worked: version 2.92.0 Alpha, branch: master, commit dates before 13/12/2020 **Short description of error** Add-ons that create new or modify existing menus now crash Blender in the latest commits. This includes stock add-ons (e.g. Extra Objects, Archimesh, Archipack, Boltfactory, etc.) and 3rd party ones (in my case, Graswald. But, I know that 3rd-party tools are for the creator to fix, so this can be ignored). **Exact steps for others to reproduce the error** - Launch Blender and enable an add-on that creates new or modifies a menu - Call the newly created/modified menu - Crash ``` Thread 27 Crashed: 0 org.blenderfoundation.blender 0x000000010a84bdbe icon_preview_startjob_all_sizes + 206 1 org.blenderfoundation.blender 0x0000000109696677 do_job_thread + 39 2 libsystem_pthread.dylib 0x00007fff724572eb _pthread_body + 126 3 libsystem_pthread.dylib 0x00007fff7245a249 _pthread_start + 66 4 libsystem_pthread.dylib 0x00007fff7245640d thread_start + 13 ```
Author

Added subscriber: @PhlixFer

Added subscriber: @PhlixFer

#83816 was marked as duplicate of this issue

#83816 was marked as duplicate of this issue

#83809 was marked as duplicate of this issue

#83809 was marked as duplicate of this issue

#83790 was marked as duplicate of this issue

#83790 was marked as duplicate of this issue

#83789 was marked as duplicate of this issue

#83789 was marked as duplicate of this issue

#83759 was marked as duplicate of this issue

#83759 was marked as duplicate of this issue

#83768 was marked as duplicate of this issue

#83768 was marked as duplicate of this issue

#83784 was marked as duplicate of this issue

#83784 was marked as duplicate of this issue

Added subscriber: @rjg

Added subscriber: @rjg

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'

Could you please copy the text from the macOS Crash Reporter and attach it as a file to your report?

Could you please copy the text from the macOS Crash Reporter and attach it as a file to your report?

Added subscriber: @rpserge

Added subscriber: @rpserge
Author

ah, I'm sorry. I forgot to attach those.
This is the Crash Reporter output
and this is the Terminal output

P.S. I also discovered that the crashes happen most often with 3rd party add-ons, "Archimesh", and "Archipack"

ah, I'm sorry. I forgot to attach those. [This is the Crash Reporter output ](https://pastebin.com/CDqqVWe1) [and this is the Terminal output ](https://pastebin.com/auXpikQe) P.S. I also discovered that the crashes happen most often with 3rd party add-ons, "Archimesh", and "Archipack"

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Changed status from 'Needs User Info' to: 'Resolved'

Changed status from 'Needs User Info' to: 'Resolved'
Campbell Barton self-assigned this 2020-12-15 08:18:47 +01:00

Could you include the contents of blender.crash.txt (shown in the terminal output)

Could you include the contents of `blender.crash.txt` (shown in the terminal output)

Changed status from 'Resolved' to: 'Needs User Info'

Changed status from 'Resolved' to: 'Needs User Info'
Author

Ah, I forgot that existed, too. Sorry!
blender.crash.txt

Ah, I forgot that existed, too. Sorry! [blender.crash.txt](https://archive.blender.org/developer/F9510191/blender.crash.txt)

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel

I could reproduce this by enabling Archipack and then opening the Add > Mesh menu. The ip->id is NULL in icon_preview_startjob_all_sizes. The commit that introduced the code was 4b0396695c @Severin.

I could reproduce this by enabling Archipack and then opening the *Add > Mesh* menu. The `ip->id` is `NULL` in `icon_preview_startjob_all_sizes`. The commit that introduced the code was 4b0396695c @Severin.
Campbell Barton was unassigned by Robert Guetzkow 2020-12-15 10:45:10 +01:00
Julian Eisel was assigned by Robert Guetzkow 2020-12-15 10:45:10 +01:00

Added subscriber: @VaguelyButter

Added subscriber: @VaguelyButter
Robert Guetzkow changed title from Add-ons That Add or Modify Menus Crashes Blender to Crashes with Add-on's icon preview in menus 2020-12-15 11:30:10 +01:00

Added subscriber: @Mets

Added subscriber: @Mets
Member

Added subscriber: @Vyach

Added subscriber: @Vyach
Robert Guetzkow changed title from Crashes with Add-on's icon preview in menus to Crashes with add-on's icon preview in menus 2020-12-15 11:39:21 +01:00

This issue was referenced by ef2151d73d

This issue was referenced by ef2151d73de87b3e7be631b6712283a727f8d4a6
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'

Added subscriber: @EchoDot

Added subscriber: @EchoDot
Member

Added subscriber: @tahayaki

Added subscriber: @tahayaki

Added subscriber: @MLSpence

Added subscriber: @MLSpence

Added subscriber: @rpopovici

Added subscriber: @rpopovici

Calling load from file on previews from python crashes blender..
preview_collection = bpy.utils.previews.new() preview_collection.load(name, os.path.join(ICONS_PATH, name + '.png'), 'IMAGE')

Calling load from file on previews from python crashes blender.. ` preview_collection = bpy.utils.previews.new() preview_collection.load(name, os.path.join(ICONS_PATH, name + '.png'), 'IMAGE') `
Member

Added subscriber: @MalgMunch

Added subscriber: @MalgMunch
Member

@rpopovici did you try with the builds from today? https://builder.blender.org/download/

To be clear, and because it's difficult to see in the general noise of this task:
The crash with displaying custom previews (like created from add-ons) is fixed in master (aka the alpha builds) already. If there are still issues remaining, please create a new report, that is a different bug then.

@rpopovici did you try with the builds from today? https://builder.blender.org/download/ To be clear, and because it's difficult to see in the general noise of this task: The crash with displaying custom previews (like created from add-ons) is fixed in master (aka the alpha builds) already. If there are still issues remaining, please create a new report, that is a different bug then.

Removed subscriber: @Vyach

Removed subscriber: @Vyach
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
9 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#83776
No description provided.